derive-ex-tests/tests/compile_fail/compare_op/eq_with_parital_eq_ignore.rs
use derive_ex::derive_ex;

#[derive_ex(Eq, PartialEq)]
struct X(#[partial_eq(ignore)] String);

fn main() {}
