derive-ex-tests/tests/compile_fail/compare_op/eq_with_parital_eq_ignore.stderr
error: When `#[derive_ex(Eq)]` is specified, `#[eq(ignore)]` must be used instead of `#[partial_eq(ignore)]`.
 --> tests/compile_fail/compare_op/eq_with_parital_eq_ignore.rs:4:23
  |
4 | struct X(#[partial_eq(ignore)] String);
  |                       ^^^^^^
